@@ -1,3 +1,9 @@
+2008-06-26  Martin Lambers <marlam@marlam.de>
+
+	* cvl/cvl_intern.h, cvl/cvl_gl.c: Replace the GLX implementation of
+	cvl_gl_context_new() with code from glewinfo, in the hope that it will
+	work in more situations.
+
 2008-06-25  Martin Lambers <marlam@marlam.de>
 
 	* cvl/cvl_io.c: Avoid to use cvl_channel_combine() in cvl_read_pfs()
